Fixed mobile offcenter navbar.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3341,7 +3341,7 @@ input, select, textarea {
 		}
 		
 		#header {
-			padding: 1em;
+			padding: 1em 0;
 		}
 
 		.registries li {
